simplifing the ant_convert_build.gradle file